# LearnPyTorch

./: .gitignore
datasets/: .gitattributes  .gitignore
datasets/Food-3/my_own/sushi/: 90e418cd-c4d3-4826-b4c2-9c21c000fece.jpg.avif
model/Localization/: main.ipynb
model/MNIST_Autoencoder/: autoencoder.ipynb  pyproject.toml
model/MNIST_Autoencoder/autoencoder/: __init__.py  dataset.py  model.py
model/MNIST_Autoencoder/parameter/: google_colab.pt
model/MNIST_ShortCut/: shortcut.ipynb
model/mnist_autoencoder/: autoencoder.ipynb
model/mnist_autoencoder/parameter/: best.pt
template/: local_and_google_colab (no nguyenpanda.crow support).ipynb  local_and_google_colab.ipynb
