[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "wheel",
]

[project]
version = '0.0.0'
name = "autoencoder"
authors = [
    {name = "nguyenpanda", email = "hatuongnguyen0107@gmail.com"},
]
description = "autoencoder"
requires-python = ">=3.8,<=3.13"

[tool.setuptools.packages.find]
include = ["autoencoder"]
